--- a/Pytorch_Slow_Fast_Koi.ipynb
+++ b/Pytorch_Slow_Fast_Koi.ipynb
@@ -477,8 +477,8 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([0, 0, 2, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 2, 2, 2, 0, 0, 1, 0, 2, 2, 2,\n",
-       "         1, 1, 0, 0, 0, 2, 0, 2]),\n",
+       "(tensor([2, 2, 0, 2, 2, 0, 1, 1, 0, 1, 2, 0, 1, 0, 2, 2, 0, 0, 2, 1, 0, 1, 1, 2,\n",
+       "         2, 1, 2, 2, 2, 1, 2, 2]),\n",
        " 32)"
       ]
      },
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "a0acfca8-861a-4441-a3ba-64458c31ac81",
    "metadata": {},
    "outputs": [],
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "4195fa65-38d3-4bee-99f6-109b84f4fbfb",
    "metadata": {},
    "outputs": [
@@ -666,9 +666,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10, Loss: 0.8080432558059693, Accuracy: 0.7466666666666667\n",
-      "Validation Accuracy: 0.9866666666666667\n",
-      "Epoch 2/10, Loss: 0.5655038213729858, Accuracy: 0.9906666666666667\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Epoch 1/10, Loss: 0.8126394176483154, Accuracy: 0.7226666666666667\n",
+      "Validation Accuracy: 0.98\n",
+      "Epoch 2/10, Loss: 0.5755083632469177, Accuracy: 0.98\n",
       "Validation Accuracy: 0.9933333333333333\n",
       "\n",
       "Reached 99% accuracy or patience limit. Stopping training.\n"
@@ -701,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "6d04296c-3a67-43db-a7b6-e3213a5c7d02",
    "metadata": {},
    "outputs": [
@@ -724,7 +725,7 @@
        ")"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "70bb4608-3d27-4675-9fdc-9668a61c3940",
    "metadata": {},
    "outputs": [],
@@ -768,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "5cb36d6e-d32c-45df-bd11-90acd159a4c4",
    "metadata": {},
    "outputs": [],
@@ -778,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "bc0b84f5-3b04-4e49-bd3c-0d253c84c7c7",
    "metadata": {},
    "outputs": [
@@ -804,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "45e261c1-ccf5-4f64-888e-dd5a8b0c9eed",
    "metadata": {},
    "outputs": [],
@@ -826,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "7898283f-832b-4b01-8046-220a2f5d3fdd",
    "metadata": {},
    "outputs": [],
@@ -846,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "id": "750e356d-1f35-438d-94dc-9a10c3739ee2",
    "metadata": {},
    "outputs": [],
@@ -859,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "id": "ba03f8cf-1329-4de8-8cd2-8147e11921b7",
    "metadata": {},
    "outputs": [
@@ -877,7 +878,7 @@
        " 'Testing_images/Koi/L1_1252575470.863280058_spectrogram_4.0.png']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "8e7ab7a3-2d7b-4bbb-bdb5-ee7b5b781f76",
    "metadata": {},
    "outputs": [
@@ -942,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "id": "41db21bc-2281-47d0-9fbc-fea004ea767a",
    "metadata": {},
    "outputs": [
